--- a/openapi-client-template/model_property.py.jinja
+++ b/openapi-client-template/model_property.py.jinja
@@ -10,8 +10,8 @@
 
 {% macro check_type_for_construct(property, source) %}isinstance({{ source }}, dict){% endmacro %}
 
-{% macro transform(property, source, destination, declare_type=True, multipart=False, transform_method="to_dict") %}
-{% set transformed = source + "." + transform_method + "()" %}
+{% macro transform(property, source, destination, declare_type=True, multipart=False, transform_method="dict(by_alias=True)") %}
+{% set transformed = source + "." + transform_method %}
 {% if multipart %}
     {% set transformed = "(None, json.dumps(" + transformed + ").encode(), 'application/json')" %}
     {% set type_string = "Union[Unset, Tuple[None, bytes, str]]" %}
