--- a/openapi-client-template/model.py.jinja
+++ b/openapi-client-template/model.py.jinja
@@ -129,6 +129,7 @@ return field_dict
 
     class Config:
         arbitrary_types_allowed = True
+        allow_population_by_field_name = True
 
     {% if model.additional_properties %}
     @property
