--- a/openapi-client-template/model.py.jinja
+++ b/openapi-client-template/model.py.jinja
@@ -67,7 +67,12 @@ class {{ class_name }}(BaseModel):
     {% endfor %}
     {% for property in model.required_properties + model.optional_properties %}
     {% if property.default is not none or not property.required %}
-    {{ property.to_string() }}
+    {% if " = UNSET" in property.to_string() %}
+    {{ property.to_string().replace(" = UNSET", "") }} = Field(alias="{{ property.name }}")
+    {% else %}
+    {% set property_key, default_value = property.to_string().split(" = ") %}
+    {{ property_key}} = Field({{default_value}}, alias="{{ property.name }}")
+    {% endif %}
     {% endif %}
     {% endfor %}
     {% if model.additional_properties %}
