fix: we need UNSET, but make sure to filter on to_dict

--- a/openapi-client-template/model.py.jinja
+++ b/openapi-client-template/model.py.jinja
@@ -68,7 +68,7 @@ class {{ class_name }}(BaseModel):
     {% for property in model.required_properties + model.optional_properties %}
     {% if property.default is not none or not property.required %}
     {% if " = UNSET" in property.to_string() %}
-    {{ property.to_string().replace(" = UNSET", "") }} = Field(alias="{{ property.name }}")
+    {{ property.to_string().replace(" = UNSET", "") }} = Field(UNSET, alias="{{ property.name }}")
     {% else %}
     {% set property_key, default_value = property.to_string().split(" = ") %}
     {{ property_key}} = Field({{default_value}}, alias="{{ property.name }}")
@@ -135,6 +135,10 @@ return field_dict
     class Config:
         arbitrary_types_allowed = True
         allow_population_by_field_name = True
+
+    def dict(self, *args, **kwargs):
+        output = super().dict(*args, **kwargs)
+        return {k: v for k, v in output.items() if v is not UNSET}
 
     {% if model.additional_properties %}
     @property
