feat: add a raise_on_error flag
Circumvent returning the entire response and instead raise an exception if the status is over 300 and if the request is sucessful return the parsed data object.

--- a/openapi-client-template/endpoint_macros.py.jinja
+++ b/openapi-client-template/endpoint_macros.py.jinja
@@ -90,6 +90,7 @@ _client: AuthenticatedClient,
 {% else %}
 _client: Client,
 {% endif %}
+raise_on_error: Optional[bool] = None,
 {# Form data if any #}
 {% if endpoint.form_body %}
 form_data: {{ endpoint.form_body.get_type_string() }},
