--- a/openapi-client-template/endpoint_module.py.jinja
+++ b/openapi-client-template/endpoint_module.py.jinja
@@ -1,10 +1,11 @@
+import json
 from http import HTTPStatus
 from typing import Any, Dict, List, Optional, Union, cast
 
 import httpx
 
 from ...client import AuthenticatedClient, Client
-from ...types import Response, UNSET
+from ...types import Response, UNSET, ApiError, Error
 from ... import errors
 
 {% for relative in endpoint.relative_imports %}
@@ -41,7 +42,7 @@ def _get_kwargs(
     {{ multipart_body(endpoint) | indent(4) }}
 
     return {
-	    "method": "{{ endpoint.method }}",
+        "method": "{{ endpoint.method }}",
         "url": url,
         "headers": headers,
         "cookies": cookies,
@@ -105,18 +106,29 @@ def sync_detailed(
         **kwargs,
     )
 
-    return _build_response(client=_client, response=response)
+    resp = _build_response(client=_client, response=response)
 
-{% if parsed_responses %}
-def sync(
-    {{ arguments(endpoint) | indent(4) }}
-) -> Optional[{{ return_string }}]:
-    {{ docstring(endpoint, return_string, is_detailed=false) | indent(4) }}
+    raise_on_error = raise_on_error if raise_on_error is not None else _client.raise_on_error
+    if not raise_on_error:
+        return resp
 
-    return sync_detailed(
-        {{ kwargs(endpoint) }}
-    ).parsed
-{% endif %}
+    if resp.status_code < 300:
+        return resp.parsed.data
+
+    try:
+        error = json.loads(resp.content)
+        details = error.get("error", {})
+    except Exception:
+        details = {"message": resp.content}
+    raise ApiError(
+        Error(
+            status_code=resp.status_code,
+            message=details.get("message"),
+            code=details.get("code"),
+            data=details.get("data"),
+            headers=resp.headers,
+        )
+    )
 
 async def asyncio_detailed(
     {{ arguments(endpoint) | indent(4) }}
@@ -134,15 +146,27 @@ async def asyncio_detailed(
             **kwargs
         )
 
-    return _build_response(client=_client, response=response)
+    resp = _build_response(client=_client, response=response)
 
-{% if parsed_responses %}
-async def asyncio(
-    {{ arguments(endpoint) | indent(4) }}
-) -> Optional[{{ return_string }}]:
-    {{ docstring(endpoint, return_string, is_detailed=false) | indent(4) }}
+    raise_on_error = raise_on_error if raise_on_error is not None else _client.raise_on_error
+    if not raise_on_error:
+        return resp
 
-    return (await asyncio_detailed(
-        {{ kwargs(endpoint) }}
-    )).parsed
-{% endif %}
+    if resp.status_code < 300:
+        return resp.parsed.data
+
+    try:
+        error = json.loads(resp.content)
+        details = error.get("error", {})
+    except Exception:
+        details = {"message": resp.content}
+    raise ApiError(
+        Error(
+            status_code=resp.status_code,
+            message=details.get("message"),
+            code=details.get("code"),
+            data=details.get("data"),
+            headers=resp.headers,
+        )
+    )
+
